src/tess/tl/test/pass/test_transitive_closure_capture.tl
#module main

main() {
    x     := 10
    inner := () { x }
    outer := () { inner() }
    outer()
    0
}
